# igeCreator

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist.in  README.md  build.py  conanfile.py  main.cpp
app/: Plane.dae  Plane.pyxf  Release.txt  SampleScene.json  Trees_Object.pyxf  animation_test.json  convert.py  figure.conf  igeCreator.icns  imgui.ini  layout.ini  physic_test.json  settings.json  site-packages.pyxd  test.json
app/config/: app.yaml  layout.ini
app/figure/: Tree_Tex.pyxi  Trees_Object.dae  Trees_Object.pyxf  camera.dae  camera.pyxf  cone.pyxf  cube.dae  cube.pyxf  cylinder.pyxf  fabric.dae  fabric.pyxf  figure.conf  plane.dae  plane.pyxf  sampler.pyxi  sphere.dae  sphere.pyxf  stageStraight.dae  stageStraight.pyxf  torus.pyxf
app/figures/: camera.pyxf
app/icon/: btn_2d.pyxi  btn_3d.pyxi  btn_global.pyxi  btn_local.pyxi  btn_play.pyxi  btn_rotate.pyxi  btn_scale.pyxi  btn_stop.pyxi  btn_translate.pyxi  file_audio.pyxi  file_font.pyxi  file_image.pyxi  file_model.pyxi  file_prefab.pyxi  file_python.pyxi  file_undefined.pyxi  folder.pyxi  group.pyxi  image.pyxi  model.pyxi  pause.pyxi  rotate.pyxi  scale.pyxi  stop.pyxi
app/icons/: btn_2d.pyxi  btn_global.pyxi  btn_pause.pyxi  btn_play.pyxi  btn_translate.pyxi  file_animation_clip.pyxi  file_animator.pyxi  file_audio.pyxi  file_effect.pyxi  file_font.pyxi  file_prefab.pyxi  file_python.pyxi  folder.pyxi
app/prefab/: Cube.prefab
app/project_template/: project.config  sample.igeproj
app/scene/: Cube.scene  Light.scene  SampleScene.json  TestNavigation.scene  TestParticleEffects.scene  TestPhysic.scene  TestPhysicSoftBody.scene  TestPhysicSoftBodyCube.scene  TestPhysicSoftBodySphere.scene  animation_test.json  main.json  physic_test.json  test_10000_obj.json  test_1000_obj.json  test_audio.json
app/scripts/: chacter.py  hello.py  sphere.py
app/sprite/: background.pyxi  dirt.pyxi  grid.pyxi  light.pyxi  logo_indigames.pyxi  rect.pyxi  spot-light.pyxi  sun.pyxi  white.pyxi
app/sprites/: background.pyxi  direct-light.pyxi  grid.pyxi  logo.pyxi  micro.pyxi  point-light.pyxi  spot-light.pyxi  white.pyxi
app/toolchains/: app_config.py  build.py  build_pylibs.py  build_rom.py  convert_textures.py  skAdNetwork.plist
app/toolchains/project_template/android/app/: CMakeLists.txt  build.gradle  igeLauncherAndroid.jks  proguard-rules.pro
app/toolchains/project_template/android/app/libs/: lib.aar
app/toolchains/project_template/android/app/src/main/: AndroidManifest.xml
app/toolchains/project_template/android/app/src/main/cpp/: native-lib.cpp
app/toolchains/project_template/android/app/src/main/java/net/indigames/igeSample/: MainActivity.java
app/toolchains/project_template/android/app/src/main/java/net/indigames/lib/: CoreHelper.java  PALHelper.java  SocialHelper.java  StorageManager.java  WebViewHelper.java
app/toolchains/project_template/android/app/src/main/java/net/indigames/lib/ads/: AppLovinMax.java
app/toolchains/project_template/android/app/src/main/java/net/indigames/lib/iap/: InAppPurchase.java  Security.java  SingleMediatorLiveEvent.java
app/toolchains/project_template/android/app/src/main/java/net/indigames/lib/notification/: IGENotificationPublisher.java  NotifyEvent.java  NotifyRequest.java  NotifyWorker.java
app/toolchains/project_template/android/app/src/main/java/net/indigames/lib/social/gamesServices/: IGEGamesServices.java
app/toolchains/project_template/android/app/src/main/java/net/indigames/lib/social/gamesSharing/: IGEFacebookSharing.java  IGEInstagramSharing.java  IGETwitterSharing.java
app/toolchains/project_template/android/app/src/main/java/net/indigames/lib/webview/: IGEWebActivity.java  IGEWebView.java
app/toolchains/project_template/android/app/src/main/java/net/indigames/lib/xpromo/: CrossPromo.java
app/toolchains/project_template/android/app/src/main/java/org/libsdl/app/: HIDDeviceManager.java  SDL.java  SDLActivity.java  SDLAudioManager.java  SDLControllerManager.java
app/toolchains/project_template/android/app/src/main/java/org/opencv/: CameraActivity.kt
app/toolchains/project_template/android/app/src/main/res/layout/: activity_web.xml
app/toolchains/project_template/android/app/src/main/res/values/: strings.xml  styles.xml
app/toolchains/project_template/android/app/src/main/res/xml/: file_paths.xml  network_security_config.xml
app/toolchains/project_template/emscripten/: CMakeLists.txt  main.cpp
app/toolchains/project_template/ios/: CMakeLists.txt  Info.plist.in  Podfile  ProductIds.plist  buildConfig.xcconfig  exportOptions.plist
app/toolchains/project_template/ios/src/: main.mm
app/toolchains/project_template/macos/: CMakeLists.txt  Info.plist.in  Podfile
app/toolchains/project_template/macos/src/: main.h  main.mm
app/toolchains/project_template/windows/: CMakeLists.txt  main.cpp
app/tools/: build-android.bat  build-game-android.bat  build-game-pc.bat  build-rom.bat  build-windows.bat  build.py  convert-textures.bat
cmake/: FindigeScene.cmake  FindigeSdk.cmake
core/: Canvas.cpp  Canvas.h  Container.cpp  Container.h  Editor.cpp  Editor.h  FileHandle.h  Panel.cpp  Panel.h  Widget.cpp  Widget.h
core/button/: Button.cpp  Button.h
core/dialog/: MsgBox.h  OpenFileDialog.cpp  OpenFileDialog.h  SaveFileDialog.cpp  SaveFileDialog.h
core/filesystem/: FileSystem.cpp  FileSystem.h  FileSystemWatcher.h
core/gizmo/: Gizmo.cpp  Gizmo.h
core/input/: Slider.h  Slider.hpp  TextInput.cpp
core/layout/: Columns.h  Group.cpp  Group.h
core/menu/: ContextMenu.cpp  ContextMenu.h  Menu.cpp  Menu.h  MenuBar.cpp  MenuItem.cpp  MenuItem.h
core/panels/: AssetBrowser.cpp  AssetBrowser.h  AssetViewer.h  Console.cpp  Console.h  EditorScene.cpp  EditorScene.h  GameScene.cpp  GameScene.h  Menu.cpp  (+9 more)
event/: Event.h  EventImpl.hpp
libs/igeGame/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
scripts/: build-game-android.bat  build-game-pc.bat  build-pc.bat  build-rom.bat  build.bat  build.py  gen-pc.bat  genProject.bat
src/: Prefix.pch  igeCreator.rc  main.cpp  main.h  main.mm
utils/: GraphicsHelper.cpp  GraphicsHelper.h  Singleton.h
(+607 files in other folders)
